Fixed vertical alignment for avatars in a 2-line list

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -323,6 +323,10 @@ md-menu-content {
         font-size: 20px;
       }
     }
+    
+    .md-2-line .md-avatar {
+      margin-top: 16px;
+    }
 
     h3, h4, span {
       font-family: 'komika slick', sans-serif;
